2006-03-15  Christian Stimming <stimming@tuhh.de>

	* src/gnc-module/gnc-module.h: Remove include <ltdl.h> that is
	unnecessary for code using this header. Gets rid of some <ltdl.h>
	weirdness that plagues other object code files on windows.

2006-03-14  Christian Stimming <stimming@tuhh.de>

	* src/backend/file/gnc-backend-file.c: Disable extra NFS lockfile
	checking on windows due to missing link(2). This is not a problem
	because on windows there also is no NFS, and the
	open(O_CREAT|O_EXCL) is sufficiently atomic for our purposes.

	* src/backend/file/io-gncxml-v2.c: Disable file compression on
	windows due to missing pipe(2), conditioned on #ifdef
	_WIN32. Insert code suggestion for windows, but is disabled for
	now.

	* src/gnome-utils/gnc-druid-provider-multifile-gnome.h: Improve
	include order so that building without <glob.h> is possible.

2006-03-14  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-tree-view-account.c:
	* src/gnome-utils/gnc-account-sel.c:
	* src/gnome/druid-stock-split.c:
	* src/engine/Account.c:
	* src/engine/gw-engine-spec.scm:
	* src/engine/Group.[ch]: Leave the accounts unordered in the
	engine.  Switch the g-wrap functions that return account lists to
	use new functions that return sorted lists so that they see no
	change.  Fixes 331855.  Also change the default account sorting to
	sort on utf8 strings.

	* src/gnome-utils/dialog-account.c: Fix a warning message.

2006-03-13  Neil Williams  <linux@codehelp.co.uk>

	* : Synchronise with external QOF 0.6.3

	* qof/deprecated.c : Tweak.
	* qof/deprecated.h : Tweak.
	* qof/gnc-date.c : Use the macro defined in
	external QOF that avoids a legacy gnucash macro.

	* backend/file/qsf-backend.c : Standardise on gint and gchar.
	Skip unregistered objects when processing maps.
	* backend/file/qsf-map.xsd.xml : allow for iteration of hierarchical
	objects
	* backend/file/qsf-xml-map.c : Standardise on gint and gchar.
	Correct map handling to allow reverse operations and iteration