@@ -20,6 +20,9 @@ noinst_HEADERS = \
   business-options.h
 
 libgncmod_business_utils_la_LIBADD = \
+  ${top_builddir}/src/gnc-module/libgncmodule.la \
+  ${top_builddir}/src/app-utils/libgncmod-app-utils.la \
+  ${G_WRAP_LINK_ARGS} \
   ${GUILE_LIBS} \
   ${GLIB_LIBS} \
   ${QOF_LIBS} \
